log
Thu 14 Sep 2023 05:03:35 PM UTC: 
 tests:  1|8
total_score: 0/70
5a3b776
Thu 14 Sep 2023 05:13:37 PM UTC: 
 treemap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
e526c2e
Thu 14 Sep 2023 05:51:50 PM UTC: 
 treemap.c | 29 ++++++++++++++---------------
 1 file changed, 14 insertions(+), 15 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   76 |   treeNode* currenNode = tree -> root;
      |   ^~~~~~~~
      |   TreeNode
treemap.c:76:26: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   76 |   treeNode* currenNode = tree -> root;
      |                          ^~~~
treemap.c:77:9: error: ‘currendNode’ undeclared (first use in this function); did you mean ‘currenNode’?
   77 |   while(currendNode != NULL)
      |         ^~~~~~~~~~~
      |         currenNode
treemap.c:77:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:76:13: error: unused variable ‘currenNode’ [-Werror=unused-variable]
   76 |   treeNode* currenNode = tree -> root;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8deee15
Thu 14 Sep 2023 05:54:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   76 |   treeNode* currenNode = tree -> root;
      |   ^~~~~~~~
      |   TreeNode
treemap.c:76:26: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   76 |   treeNode* currenNode = tree -> root;
      |                          ^~~~
treemap.c:77:9: error: ‘currendNode’ undeclared (first use in this function); did you mean ‘currenNode’?
   77 |   while(currendNode != NULL)
      |         ^~~~~~~~~~~
      |         currenNode
treemap.c:77:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:79:43: error: ‘currentNode’ undeclared (first use in this function); did you mean ‘currenNode’?
   79 |       int valor = tree -> lower_than(key, currentNode -> pair -> key);
      |                                           ^~~~~~~~~~~
      |                                           currenNode
treemap.c:79:11: error: unused variable ‘valor’ [-Werror=unused-variable]
   79 |       int valor = tree -> lower_than(key, currentNode -> pair -> key);
      |           ^~~~~
treemap.c:76:13: error: unused variable ‘currenNode’ [-Werror=unused-variable]
   76 |   treeNode* currenNode = tree -> root;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cb70e63
Thu 14 Sep 2023 05:56:13 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:76:3: error: unknown type name ‘treeNode’; did you mean ‘TreeNode’?
   76 |   treeNode* currenNode = tree -> root;
      |   ^~~~~~~~
      |   TreeNode
treemap.c:76:26: error: initialization of ‘int *’ from incompatible pointer type ‘TreeNode *’ [-Werror=incompatible-pointer-types]
   76 |   treeNode* currenNode = tree -> root;
      |                          ^~~~
treemap.c:77:9: error: ‘currendNode’ undeclared (first use in this function); did you mean ‘currenNode’?
   77 |   while(currendNode != NULL)
      |         ^~~~~~~~~~~
      |         currenNode
treemap.c:77:9: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:79:43: error: ‘currentNode’ undeclared (first use in this function); did you mean ‘currenNode’?
   79 |       int valor = tree -> lower_than(key, currentNode -> pair -> key);
      |                                           ^~~~~~~~~~~
      |                                           currenNode
treemap.c:82:38: error: expected ‘;’ before ‘return’
   82 |         tree -> current = currentNode
      |                                      ^
      |                                      ;
   83 |           return currentNode -> pair;
      |           ~~~~~~                      
treemap.c:76:13: error: unused variable ‘currenNode’ [-Werror=unused-variable]
   76 |   treeNode* currenNode = tree -> root;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
73f07a5
